--- a/index.html
+++ b/index.html
@@ -5,26 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="st.css">
+    
     <title>Document</title>
 </head>
 <body>
+  <div class="content">
+    <div class="pagin">
+      <div class="btns">
+        <span id="pre"><span><<</span> <span>Previous</span></span>
+        <span id="num">1</span>
+        <span id="num">2</span>
+        <span id="num">3</span>
+        <span id="num">4</span>
+        <span id="num">5</span>
+        <span id="num">6</span>
+        <span id="num">7</span>
+        <span id="num">8</span>
+        <span id="num">9</span>
+        <span id="num">10</span>
+        <span id="nxt">Next>></span>
+      </div>
+      
+      </div>
+  <div class="info">
+<div class="id"><b>Id:</b><span id="id"></span></div>
+<div class="nam"><b>Name:</b><span id="nam"></span></div>
+<div class="email"><b>Email:</b><span id="email"></span></div></div>
 
-<div class="info">
-  <div>Id: <span id="id"></span></div>
-  <div>Name: <span id="nam"></span></div>
-  <div>Job: <span id="job"></span></div>
-  <div><img src="" alt="" id="img" height="250px" width="250px"></div>
-  <div>Text: <span id="txt"></span></div>
-</div>
-<div class="pagin">
-  <ul class="lst" style="list-style:none ; display: flex;">
-    <li class="pre"><span><<</span> Previous</li>
-    <li class="num" >1</li>
-    <li class="num" >2</li>
-    <li class="nxt">Next>></li>
-
-  </ul>
-</div>
+  </div>
 <script src="script.js"></script>
 </body>
 
