--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <title>Document</title>
 </head>
-<body>
+<body style="background-image: radial-gradient(rgb(50, 133, 161),rgb(92, 211, 226));">
   <div class="hd" style="display:flex; justify-content: center;"><h1>Enter the details</h1></div>
   <div class="cont">
   <form id="fm">
