--- a/index.html
+++ b/index.html
@@ -5,37 +5,119 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="st.css">
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<script src="https://kit.fontawesome.com/e24f3b2989.js" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
 <body>
-  <header>
-  <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-  </svg></div>
-  <div class="name"><span>GITHUB</span></div>
-</header>
-
-<section class="main">
-
-  <div class="sec1"><div class="side"></div></div>
-
-  <div class="sec2">
-
-    <div class="top"><input type="search" placeholder="  Search "></div>
-
-    <div class="middle">
-      <div class="b"></div>
-      <div class="b"></div>
-      <div class="b"></div>
-    </div>
-
-    <div class="bottom"><div class="footer"></div></div>
-
+  <form >
+    <label class="name"><b>Name</b><sup>*</sup></label>
+    <div class="boxes">
+  <div class="box1"><input type="text" ><br><small>First</small></div>
+  <div class="box2"><input type="text" ><br><small>Last</small></div></div>
+    
+  <label class="email"><b>Email</b><sup>*</sup></label>
+  <div><input class="emailbox" type="email"></div>
+   
+  <label class="exp"><b>Your Experience</b><sup>*</sup></label>
+  <div class="rating">
+    <input type="radio" name="star" id="star5" value="Loved it!!"><label for="star5"></label>
+    <input type="radio" name="star" id="star4" value="Excellent!!"><label for="star4"></label>
+    <input type="radio" name="star" id="star3" value="Good"><label for="star3"></label>
+    <input type="radio" name="star" id="star2" value="Not bad"><label for="star2"></label>
+    <input type="radio" name="star" id="star1" value="Very bad"><label for="star1"></label>
   </div>
+  <div class="text"></div>
 
-</section>
+  <div class="tablemessage"><b>How satisfied are you with<sup>*</sup></b></div>
+  
+  <table class="table">
+    <thead>
+      <tr>
+        <td></td>
+        <td>Very Unsatisfied</td>
+        <td> Unsatisfied</td>
+        <td>Neutral</td>
+        <td>Satisfied</td>
+        <td>Very Satified</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Purchase</td>
+        <td><input type="radio" name="r4"></td>
+        <td><input type="radio" name="r4"></td>
+        <td><input type="radio" name="r4"></td>
+        <td><input type="radio" name="r4"></td>
+        <td><input type="radio" name="r4"></td>
+        
+      </tr>
+      <tr>
+        <td>Service</td>
+        <td><input type="radio" name="r5"></td>
+        <td><input type="radio" name="r5"></td>
+        <td><input type="radio" name="r5"></td>
+        <td><input type="radio" name="r5"></td>
+        <td><input type="radio" name="r5"></td>
+      </tr>
+      <tr>
+        <td>Company Overall</td>
+        <td><input type="radio" name="r6"></td>
+        <td><input type="radio" name="r6"></td>
+        <td><input type="radio" name="r6"></td>
+        <td><input type="radio" name="r6"></td>
+        <td><input type="radio" name="r6"></td>
+      </tr>
+    </tbody>
+  </table>
 
+  <div class="tablemessage"><b>How likely are you to<sup>*</sup></b></div>
+  
+  <table class="table">
+    <thead>
+      <tr>
+        <td></td>
+        <td>Very Unlikely</td>
+        <td>Unlikely</td>
+        <td>Neutral</td>
+        <td>Likely</td>
+        <td>Very Likely</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Buy from us again</td>
+        <td><input type="radio" name="r1"></td>
+        <td><input type="radio" name="r1"></td>
+        <td><input type="radio" name="r1"></td>
+        <td><input type="radio" name="r1"></td>
+        <td><input type="radio" name="r1"></td>
+      </tr>
+      <tr>
+        <td>Recommend our product to others</td>
+        <td><input type="radio" name="r2"></td>
+        <td><input type="radio" name="r2"></td>
+        <td><input type="radio" name="r2"></td>
+        <td><input type="radio" name="r2"></td>
+        <td><input type="radio" name="r2"></td>
+      </tr>
+      <tr>
+        <td>Recommend our company to others</td>
+        <td><input type="radio" name="r3"></td>
+        <td><input type="radio" name="r3"></td>
+        <td><input type="radio" name="r3"></td>
+        <td><input type="radio" name="r3"></td>
+        <td><input type="radio" name="r3"></td>
+      </tr>
+    </tbody>
+  </table>
 
+<div class="tablemessage"><b>Additional comments or suggestions</b></div>
+<div><textarea class="area" ></textarea></div>
 
+<div class="button"><button>Submit</button></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
