--- a/index.html
+++ b/index.html
@@ -11,112 +11,9 @@
   <title>Document</title>
 </head>
 <body>
-  <form >
-    <label class="name"><b>Name</b><sup>*</sup></label>
-    <div class="boxes">
-  <div class="box1"><input type="text" ><br><small>First</small></div>
-  <div class="box2"><input type="text" ><br><small>Last</small></div></div>
+    <div class="text">10</div>
+    <div class="button"><button>Start</button></div>
     
-  <label class="email"><b>Email</b><sup>*</sup></label>
-  <div><input class="emailbox" type="email"></div>
-   
-  <label class="exp"><b>Your Experience</b><sup>*</sup></label>
-  <div class="rating">
-    <input type="radio" name="star" id="star1" value="Loved it!!"><label for="star1"></label>
-    <input type="radio" name="star" id="star2" value="Excellent!!"><label for="star1"></label>
-    <input type="radio" name="star" id="star3" value="Good"><label for="star3"></label>
-    <input type="radio" name="star" id="star4" value="Not bad"><label for="star4"></label>
-    <input type="radio" name="star" id="star5" value="Very bad"><label for="star5"></label>
-  </div>
-  <div class="text"></div>
-
-  <div class="tablemessage"><b>How satisfied are you with<sup>*</sup></b></div>
-  
-  <table class="table">
-    <thead>
-      <tr>
-        <td></td>
-        <td>Very Unsatisfied</td>
-        <td> Unsatisfied</td>
-        <td>Neutral</td>
-        <td>Satisfied</td>
-        <td>Very Satified</td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Purchase</td>
-        <td><input type="radio" name="r4"></td>
-        <td><input type="radio" name="r4"></td>
-        <td><input type="radio" name="r4"></td>
-        <td><input type="radio" name="r4"></td>
-        <td><input type="radio" name="r4"></td>
-        
-      </tr>
-      <tr>
-        <td>Service</td>
-        <td><input type="radio" name="r5"></td>
-        <td><input type="radio" name="r5"></td>
-        <td><input type="radio" name="r5"></td>
-        <td><input type="radio" name="r5"></td>
-        <td><input type="radio" name="r5"></td>
-      </tr>
-      <tr>
-        <td>Company Overall</td>
-        <td><input type="radio" name="r6"></td>
-        <td><input type="radio" name="r6"></td>
-        <td><input type="radio" name="r6"></td>
-        <td><input type="radio" name="r6"></td>
-        <td><input type="radio" name="r6"></td>
-      </tr>
-    </tbody>
-  </table>
-
-  <div class="tablemessage"><b>How likely are you to<sup>*</sup></b></div>
-  
-  <table class="table">
-    <thead>
-      <tr>
-        <td></td>
-        <td>Very Unlikely</td>
-        <td>Unlikely</td>
-        <td>Neutral</td>
-        <td>Likely</td>
-        <td>Very Likely</td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Buy from us again</td>
-        <td><input type="radio" name="r1"></td>
-        <td><input type="radio" name="r1"></td>
-        <td><input type="radio" name="r1"></td>
-        <td><input type="radio" name="r1"></td>
-        <td><input type="radio" name="r1"></td>
-      </tr>
-      <tr>
-        <td>Recommend our product to others</td>
-        <td><input type="radio" name="r2"></td>
-        <td><input type="radio" name="r2"></td>
-        <td><input type="radio" name="r2"></td>
-        <td><input type="radio" name="r2"></td>
-        <td><input type="radio" name="r2"></td>
-      </tr>
-      <tr>
-        <td>Recommend our company to others</td>
-        <td><input type="radio" name="r3"></td>
-        <td><input type="radio" name="r3"></td>
-        <td><input type="radio" name="r3"></td>
-        <td><input type="radio" name="r3"></td>
-        <td><input type="radio" name="r3"></td>
-      </tr>
-    </tbody>
-  </table>
-
-<div class="tablemessage"><b>Additional comments or suggestions</b></div>
-<div><textarea class="area" ></textarea></div>
-
-<div class="button"><button>Submit</button></div>
 
   <script src="script.js"></script>
 </body>
