--- a/index.html
+++ b/index.html
@@ -11,18 +11,12 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="container">
-  <div style="display: flex; justify-content: center;">
-    <input class="name" type="text" placeholder="Enter your name">
-  </div>
-  <div class="image" style="display: flex; justify-content: center;">
-    <textarea class="comment" cols="100" rows="10" placeholder="Comment something about me here..."></textarea>
-  </div>
-  <div style="display: flex; justify-content: center;">
-  <button class="btn btn-primary" >Post your comment</button>
-
-  </div>
-  </div>
-  <script src="script.js"></script>
+ <button class="btn btn-primary" onclick="fun1()">Dog</button>
+ <button class="btn btn-primary" onclick="fun2()">Cat</button> 
+ <div class="display">
+  <img src="" alt="" class="image">
+  <video src="" class="video"></video>
+ </div>
+ <script src="script.js"></script>
 </body>
 </html>
