--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="st.css">
   <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<script src="https://kit.fontawesome.com/e24f3b2989.js" crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
- <button class="btn btn-primary" onclick="fun1()">Dog</button>
- <button class="btn btn-primary" onclick="fun2()">Cat</button> 
- <div class="display">
-  <img src="" alt="" class="image">
-  <video src="" class="video"></video>
- </div>
- <script src="script.js"></script>
+  <h1>Dictionary 📓</h1>
+  <div class="search">
+    
+    <input type="text" placeholder="Enter any word..">
+  <button class="btn btn-primary" onclick="fun()">search</button> </div>
+  <div class="info">
+    
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
